Fixing spacing between role/skills icons

--- a/css/profile.css
+++ b/css/profile.css
@@ -134,13 +134,16 @@
 	border: 1.5px solid aqua;
 	border-radius: 25px;
 	text-align: center;
-	margin-top: 5px;
+	margin: 5px;
 	display: inline;
 	padding: 2%;
 }
 
 #user_role_list{
-	margin-top: 20px;
+	margin: 0 auto;
+	line-height: 300%;
+	padding: 5px;
+	width: 100%;
 }
 
 .cf:before,
